fix: remove bootstrap por página e padroniza carga global 5.3.8

--- a/FrotiX.Novo/Pages/Abastecimento/RegistraCupons.cshtml
+++ b/FrotiX.Novo/Pages/Abastecimento/RegistraCupons.cshtml
@@ -230,11 +230,7 @@
 </div>
 
 @section ScriptsBlock{
-    <link href="https://kendo.cdn.telerik.com/themes/12.0.1/bootstrap/bootstrap-main.css" rel="stylesheet" type="text/css" />
-    @*<script src="https://kendo.cdn.telerik.com/2025.4.1321/js/jquery.min.js"></script>*@
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="https://kendo.cdn.telerik.com/2025.4.1321/js/kendo.all.min.js"></script>
-    <script src="https://kendo.cdn.telerik.com/2025.4.1321/js/kendo.aspnetmvc.min.js"></script>
+    @* Kendo/JSZip carregados globalmente em _Head/_ScriptsBasePlugins *@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.2.2/pdf.js"></script>
     <script>
         window.pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.2.2/pdf.worker.js';
