--- a/FrotiX.Novo/Pages/Agenda/Index.cshtml
+++ b/FrotiX.Novo/Pages/Agenda/Index.cshtml
@@ -1928,11 +1928,7 @@
     @* ============================================
        DEPENDÚNCIAS EXTERNAS
        ============================================ *@
-    <link href="https://kendo.cdn.telerik.com/themes/12.0.1/bootstrap/bootstrap-main.css" rel="stylesheet"
-        type="text/css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="https://kendo.cdn.telerik.com/2025.4.1321/js/kendo.all.min.js"></script>
-    <script src="https://kendo.cdn.telerik.com/2025.4.1321/js/kendo.aspnetmvc.min.js"></script>
+    @* Kendo/JSZip carregados globalmente em _Head/_ScriptsBasePlugins *@
     @* PDF.js removido daqui - já carregado no <head> (linha 127-130) para evitar duplicação e erros *@
     <script src="/api/reports/resources/js/telerikReportViewer"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
