--- a/FrotiX.Novo/Pages/Patrimonio/Index.cshtml
+++ b/FrotiX.Novo/Pages/Patrimonio/Index.cshtml
@@ -1,4 +1,4 @@
-@page
+﻿@page
 @using FrotiX.Repository.IRepository
 @using Syncfusion.EJ2
 @addTagHelper *, Syncfusion.EJ2
@@ -41,16 +41,16 @@
 		}
 	}
 
-	ViewData["Title"] = "Patrimônios";
+	ViewData["Title"] = "PatrimÃ´nios";
 	ViewData["PageName"] = "patrimonio_index";
-	ViewData["Heading"] = "<i class='fa-duotone fa-print-magnifying-glass'></i> Cadastros: <span class='fw-300'>Patrimônios</span>";
+	ViewData["Heading"] = "<i class='fa-duotone fa-print-magnifying-glass'></i> Cadastros: <span class='fw-300'>PatrimÃ´nios</span>";
 	ViewData["Category1"] = "Cadastros";
 	ViewData["PageIcon"] = "fa-duotone fa-print-magnifying-glass";
 }
 
 @section HeadBlock {
 	<style>
-/* ======== OUTLINE BRANCO NO BOTÃO DO HEADER (Padrão FrotiX) ======== */
+/* ======== OUTLINE BRANCO NO BOTÃƒO DO HEADER (PadrÃ£o FrotiX) ======== */
 		.ftx-card-header .btn-fundo-laranja {
 			outline: 2px solid rgba(255, 255, 255, 0.5) !important;
 			outline-offset: 1px;
@@ -73,12 +73,12 @@
 				<div class="ftx-card-header">
 					<h2 class="titulo-paginas">
 						<i class="fa-duotone fa-pallet-boxes"></i>
-						Listagem de Patrimônios
+						Listagem de PatrimÃ´nios
 					</h2>
 					<div class="ftx-card-actions">
 						<a href="./Patrimonio/Upsert" class="btn btn-fundo-laranja" data-ftx-loading>
 							<i class="fa-duotone fa-clone-plus icon-pulse me-1"></i>
-							Adicionar Patrimônio
+							Adicionar PatrimÃ´nio
 						</a>
 					</div>
 				</div>
@@ -89,7 +89,7 @@
 						<div class="col-12 px-3">
 							<label class="fw-bold">
 								<i class="fa-duotone fa-filter"></i>
-								Escolha os filtros desejados para visualizar os Patrimônios:
+								Escolha os filtros desejados para visualizar os PatrimÃ´nios:
 							</label>
 						</div>
 
@@ -108,7 +108,7 @@
 								</div>
 								<div class="col-3">
 									<ejs-dropdowntree id="ddtSetorSecao"
-													  placeholder="Selecione Setor/Seção"
+													  placeholder="Selecione Setor/SeÃ§Ã£o"
 													  showCheckBox="true"
 													  showClearButton="true"
 													  treeSettings="@(new Syncfusion.EJ2.DropDowns.DropDownTreeTreeSettings { AutoCheck = true })">
@@ -117,7 +117,7 @@
 								</div>
 								<div class="col-3">
 									<ejs-combobox id="cmbSituacao"
-												  placeholder="Selecione uma Situação"
+												  placeholder="Selecione uma SituaÃ§Ã£o"
 												  allowFiltering="true"
 												  filterType="Contains"
 												  popupHeight="250px"
@@ -129,10 +129,10 @@
 								<div class="col-3 d-flex align-items-end">
 									<a class="btn btn-marrom text-white w-100"
 									   id="btnFiltrarPatrimonios"
-									   data-ejtip="Filtrar os Patrimônios!"
+									   data-ejtip="Filtrar os PatrimÃ´nios!"
 									   style="cursor:pointer;">
 										<i class="fa-duotone fa-filter"></i>
-										Filtrar Patrimônios
+										Filtrar PatrimÃ´nios
 									</a>
 								</div>
 							</div>
@@ -146,11 +146,11 @@
 									<th>NPR</th>
 									<th>Marca</th>
 									<th>Modelo</th>
-									<th>Descrição</th>
+									<th>DescriÃ§Ã£o</th>
 									<th>Setor Atual</th>
-									<th>Seção Atual</th>
-									<th>Situação</th>
-									<th>Ações</th>
+									<th>SeÃ§Ã£o Atual</th>
+									<th>SituaÃ§Ã£o</th>
+									<th>AÃ§Ãµes</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -163,19 +163,20 @@
 	</div>
 </div>
 
-<!-- OVERLAY DE LOADING - PADRÃO FROTIX -->
+<!-- OVERLAY DE LOADING - PADRÃƒO FROTIX -->
 <div id="loadingOverlayPatrimonio" class="ftx-spin-overlay" style="z-index: 999999; cursor: wait; display: none;">
     <div class="ftx-spin-box" style="text-align: center; min-width: 300px;">
         <img src="/images/logo_gota_frotix_transparente.png" alt="FrotiX" class="ftx-loading-logo" style="display: block;" />
         <div class="ftx-loading-bar"></div>
-        <div class="ftx-loading-text">Carregando Patrimônios...</div>
+        <div class="ftx-loading-text">Carregando PatrimÃ´nios...</div>
         <div class="ftx-loading-subtext">Aguarde, por favor</div>
     </div>
 </div>
 
 @section ScriptsBlock {
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" crossorigin="anonymous" />
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+	
+	
 
 	<script src="~/js/cadastros/patrimonio.js" asp-append-version="true"></script>
 }
+
