--- a/FrotiX.Novo/Pages/SetorPatrimonial/Upsert.cshtml
+++ b/FrotiX.Novo/Pages/SetorPatrimonial/Upsert.cshtml
@@ -1,4 +1,4 @@
-@page
+﻿@page
 @addTagHelper*, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @* ========================================================================================
@@ -139,7 +139,7 @@
 											<label class="label font-weight-bold">
 												<input type="checkbox" class="form-check-input"
 													asp-for="SetorObj.SetorBaixa" id="chkSetorBaixa" />
-												Setor de Baixa (Destinação Final)
+												Setor de Baixa (DestinaÃ§Ã£o Final)
 											</label>
 										</div>
 									</div>
@@ -174,7 +174,7 @@
 											<a asp-page="./Index" class="btn btn-ftx-fechar form-control"
 												style="width:300px" data-ftx-loading>
 												<i class="fa-duotone fa-circle-xmark icon-space icon-pulse"></i>
-												Cancelar Operação
+												Cancelar OperaÃ§Ã£o
 											</a>
 										</div>
 									</div>
@@ -189,10 +189,8 @@
 </form>
 
 @section ScriptsBlock {
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-		crossorigin="anonymous" />
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-		crossorigin="anonymous"></script>
+	
+	
 
 	<script src="~/js/dropify.min.js"></script>
 	<script src="~/js/cadastros/setor_patrimonial.js"></script>
