--- a/FrotiX.Novo/Pages/Unidade/Upsert.cshtml
+++ b/FrotiX.Novo/Pages/Unidade/Upsert.cshtml
@@ -1,4 +1,4 @@
-@* ========================================================================================
+﻿@* ========================================================================================
  * ARQUIVO: Pages/Unidade/Upsert.cshtml
  * OBJETIVO: Formulario de cadastro/edicao de Unidades organizacionais (Diretoria/Coordenacao/Divisao/Secao)
  *           com campos hierarquicos DropDownList pai, sistema CRITICO para estrutura organizacional
@@ -37,9 +37,9 @@
 @model FrotiX.Pages.Unidade.UpsertModel
 
 @{
-	ViewData["Title"] = "Unidades Usuárias";
+	ViewData["Title"] = "Unidades UsuÃ¡rias";
 	ViewData["PageName"] = "unidade_upsert";
-	ViewData["Heading"] = "<i class='fa-duotone fa-chalkboard-user'></i> Cadastros: <span class='fw-300'>Unidades Usuárias</span>";
+	ViewData["Heading"] = "<i class='fa-duotone fa-chalkboard-user'></i> Cadastros: <span class='fw-300'>Unidades UsuÃ¡rias</span>";
 	ViewData["Category1"] = "Cadastros";
 	ViewData["PageIcon"] = "fa-duotone fa-chalkboard-user";
 }
@@ -83,7 +83,7 @@
 					<div class="ftx-card-header">
 						<h2 class="titulo-paginas">
 							<i class="fa-duotone fa-garage-car"></i>
-							@(Model.UnidadeObj.UnidadeId != Guid.Empty ? "Atualizar " : "Criar ") Unidade Usuária
+							@(Model.UnidadeObj.UnidadeId != Guid.Empty ? "Atualizar " : "Criar ") Unidade UsuÃ¡ria
 						</h2>
 					</div>
 
@@ -114,7 +114,7 @@
 										<span class="text-danger font-weight-light"
 											asp-validation-for="UnidadeObj.Descricao"></span>
 										<input class="form-control form-control-xs" asp-for="UnidadeObj.Descricao"
-											placeholder="Insira a descrição da unidade" />
+											placeholder="Insira a descriÃ§Ã£o da unidade" />
 									</div>
 								</div>
 								<div class="col-3">
@@ -124,11 +124,11 @@
 											asp-validation-for="UnidadeObj.Categoria"></span>
 										<select class="form-control form-control-xs" asp-for="UnidadeObj.Categoria">
 											<option value="">-- Categoria --</option>
-											<option value="Presidência">Presidência</option>
+											<option value="PresidÃªncia">PresidÃªncia</option>
 											<option value="Mesa">Mesa</option>
 											<option value="DG">DG</option>
 											<option value="SGM">SGM</option>
-											<option value="Liderança">Liderança</option>
+											<option value="LideranÃ§a">LideranÃ§a</option>
 											<option value="Secom">Secom</option>
 											<option value="SNE">SNE</option>
 											<option value="Fixos">Fixos</option>
@@ -271,7 +271,7 @@
 											<a asp-page="./Index" class="btn btn-ftx-fechar form-control"
 												data-ftx-loading>
 												<i class="fa-duotone fa-circle-xmark icon-space icon-pulse"></i>
-												Cancelar Operação
+												Cancelar OperaÃ§Ã£o
 											</a>
 										</div>
 									</div>
@@ -286,8 +286,6 @@
 </form>
 
 @section ScriptsBlock {
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-		crossorigin="anonymous" />
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-		crossorigin="anonymous"></script>
+	
+	
 }
