--- a/FrotiX.Novo/Views/RelatorioSetorSolicitante/Index.cshtml
+++ b/FrotiX.Novo/Views/RelatorioSetorSolicitante/Index.cshtml
@@ -1,4 +1,4 @@
-@using Stimulsoft.Report.Mvc;
+﻿@using Stimulsoft.Report.Mvc;
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Localizing the Viewer</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <div class="col-6">
-                    <a href="./Index" class="btn btn-voltar form-control" data-ftx-loading><i class="fa-duotone fa-rotate-left icon-space icon-rotate-left"></i> Voltar à Lista</a>
+                    <a href="./Index" class="btn btn-voltar form-control" data-ftx-loading><i class="fa-duotone fa-rotate-left icon-space icon-rotate-left"></i> Voltar Ã  Lista</a>
                 </div>
             </div>
         </nav>
@@ -42,4 +42,5 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
 </html>
+
 
